javasrc/CasenParser.java
// $ANTLR 3.4 Casen.g 2011-09-26 09:26:39

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class CasenParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "APPLY", "ARG", "CONTEXT", "DECIMAL_LITERAL", "DEF", "EscapeSequence", "Exponent", "FCONST", "FUN", "HEX_LITERAL", "HexDigit", "ICONST", "ID", "IFGOTO", "LBRACE", "LETTER", "LID", "LINE_COMMENT", "LSTMT", "NL", "OCTAL_LITERAL", "OctalEscape", "PARAM", "RBRACE", "RESUME", "RETURN", "SCONST", "SYMBOL", "UnicodeEscape", "WS", "YIELD", "'!'", "'!='", "'%'", "'%='", "'&&'", "'&'", "'&='", "'('", "')'", "'*'", "'*='", "'+'", "'+='", "','", "'-'", "'-='", "'.'", "'/'", "'/='", "':'", "'<'", "'<<'", "'<<='", "'<='", "'='", "'=='", "'>'", "'>='", "'>>'", "'>>='", "'GOTO'", "'IF'", "'['", "'[['", "']'", "']]'", "'^'", "'^='", "'def'", "'resume'", "'return'", "'yield'", "'|'", "'|='", "'||'", "'~'"
    };

    public static final int EOF=-1;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__70=70;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__73=73;
    public static final int T__74=74;
    public static final int T__75=75;
    public static final int T__76=76;
    public static final int T__77=77;
    public static final int T__78=78;
    public static final int T__79=79;
    public static final int T__80=80;
    public static final int APPLY=4;
    public static final int ARG=5;
    public static final int CONTEXT=6;
    public static final int DECIMAL_LITERAL=7;
    public static final int DEF=8;
    public static final int EscapeSequence=9;
    public static final int Exponent=10;
    public static final int FCONST=11;
    public static final int FUN=12;
    public static final int HEX_LITERAL=13;
    public static final int HexDigit=14;
    public static final int ICONST=15;
    public static final int ID=16;
    public static final int IFGOTO=17;
    public static final int LBRACE=18;
    public static final int LETTER=19;
    public static final int LID=20;
    public static final int LINE_COMMENT=21;
    public static final int LSTMT=22;
    public static final int NL=23;
    public static final int OCTAL_LITERAL=24;
    public static final int OctalEscape=25;
    public static final int PARAM=26;
    public static final int RBRACE=27;
    public static final int RESUME=28;
    public static final int RETURN=29;
    public static final int SCONST=30;
    public static final int SYMBOL=31;
    public static final int UnicodeEscape=32;
    public static final int WS=33;
    public static final int YIELD=34;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public CasenParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public CasenParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return CasenParser.tokenNames; }
    public String getGrammarFileName() { return "Casen.g"; }


    public static class program_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "program"
    // Casen.g:23:1: program : ( NL )? ( stmt_list )? -> ( stmt_list )? ;
    public final CasenParser.program_return program() throws RecognitionException {
        CasenParser.program_return retval = new CasenParser.program_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token NL1=null;
        CasenParser.stmt_list_return stmt_list2 =null;


        CommonTree NL1_tree=null;
        RewriteRuleTokenStream stream_NL=new RewriteRuleTokenStream(adaptor,"token NL");
        RewriteRuleSubtreeStream stream_stmt_list=new RewriteRuleSubtreeStream(adaptor,"rule stmt_list");
        try {
            // Casen.g:24:5: ( ( NL )? ( stmt_list )? -> ( stmt_list )? )
            // Casen.g:24:11: ( NL )? ( stmt_list )?
            {
            // Casen.g:24:11: ( NL )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==NL) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // Casen.g:24:11: NL
                    {
                    NL1=(Token)match(input,NL,FOLLOW_NL_in_program132);  
                    stream_NL.add(NL1);


                    }
                    break;

            }


            // Casen.g:24:15: ( stmt_list )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==FCONST||(LA2_0 >= ICONST && LA2_0 <= ID)||LA2_0==LBRACE||LA2_0==LID||LA2_0==SCONST||LA2_0==35||LA2_0==42||LA2_0==49||LA2_0==66||(LA2_0 >= 73 && LA2_0 <= 76)||LA2_0==80) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // Casen.g:24:15: stmt_list
                    {
                    pushFollow(FOLLOW_stmt_list_in_program135);
                    stmt_list2=stmt_list();

                    state._fsp--;

                    stream_stmt_list.add(stmt_list2.getTree());

                    }
                    break;

            }


            // AST REWRITE
            // elements: stmt_list
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 24:26: -> ( stmt_list )?
            {
                // Casen.g:24:29: ( stmt_list )?
                if ( stream_stmt_list.hasNext() ) {
                    adaptor.addChild(root_0, stream_stmt_list.nextTree());

                }
                stream_stmt_list.reset();

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "program"


    public static class stmt_list_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "stmt_list"
    // Casen.g:27:1: stmt_list : labeled_stmt ( NL labeled_stmt )* ( NL )? -> ( labeled_stmt )+ ;
    public final CasenParser.stmt_list_return stmt_list() throws RecognitionException {
        CasenParser.stmt_list_return retval = new CasenParser.stmt_list_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token NL4=null;
        Token NL6=null;
        CasenParser.labeled_stmt_return labeled_stmt3 =null;

        CasenParser.labeled_stmt_return labeled_stmt5 =null;


        CommonTree NL4_tree=null;
        CommonTree NL6_tree=null;
        RewriteRuleTokenStream stream_NL=new RewriteRuleTokenStream(adaptor,"token NL");
        RewriteRuleSubtreeStream stream_labeled_stmt=new RewriteRuleSubtreeStream(adaptor,"rule labeled_stmt");
        try {
            // Casen.g:28:5: ( labeled_stmt ( NL labeled_stmt )* ( NL )? -> ( labeled_stmt )+ )
            // Casen.g:28:11: labeled_stmt ( NL labeled_stmt )* ( NL )?
            {
            pushFollow(FOLLOW_labeled_stmt_in_stmt_list167);
            labeled_stmt3=labeled_stmt();

            state._fsp--;

            stream_labeled_stmt.add(labeled_stmt3.getTree());

            // Casen.g:28:24: ( NL labeled_stmt )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==NL) ) {
                    int LA3_1 = input.LA(2);

                    if ( (LA3_1==FCONST||(LA3_1 >= ICONST && LA3_1 <= ID)||LA3_1==LBRACE||LA3_1==LID||LA3_1==SCONST||LA3_1==35||LA3_1==42||LA3_1==49||LA3_1==66||(LA3_1 >= 73 && LA3_1 <= 76)||LA3_1==80) ) {
                        alt3=1;
                    }


                }


                switch (alt3) {
            	case 1 :
            	    // Casen.g:28:25: NL labeled_stmt
            	    {
            	    NL4=(Token)match(input,NL,FOLLOW_NL_in_stmt_list170);  
            	    stream_NL.add(NL4);


            	    pushFollow(FOLLOW_labeled_stmt_in_stmt_list172);
            	    labeled_stmt5=labeled_stmt();

            	    state._fsp--;

            	    stream_labeled_stmt.add(labeled_stmt5.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            // Casen.g:28:44: ( NL )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==NL) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // Casen.g:28:44: NL
                    {
                    NL6=(Token)match(input,NL,FOLLOW_NL_in_stmt_list177);  
                    stream_NL.add(NL6);


                    }
                    break;

            }


            // AST REWRITE
            // elements: labeled_stmt
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 28:48: -> ( labeled_stmt )+
            {
                if ( !(stream_labeled_stmt.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_labeled_stmt.hasNext() ) {
                    adaptor.addChild(root_0, stream_labeled_stmt.nextTree());

                }
                stream_labeled_stmt.reset();

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "stmt_list"


    public static class labeled_stmt_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "labeled_stmt"
    // Casen.g:31:1: labeled_stmt : ( ID ':' stmt -> ^( LSTMT ID stmt ) | stmt );
    public final CasenParser.labeled_stmt_return labeled_stmt() throws RecognitionException {
        CasenParser.labeled_stmt_return retval = new CasenParser.labeled_stmt_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token ID7=null;
        Token char_literal8=null;
        CasenParser.stmt_return stmt9 =null;

        CasenParser.stmt_return stmt10 =null;


        CommonTree ID7_tree=null;
        CommonTree char_literal8_tree=null;
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_54=new RewriteRuleTokenStream(adaptor,"token 54");
        RewriteRuleSubtreeStream stream_stmt=new RewriteRuleSubtreeStream(adaptor,"rule stmt");
        try {
            // Casen.g:32:5: ( ID ':' stmt -> ^( LSTMT ID stmt ) | stmt )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==ID) ) {
                int LA5_1 = input.LA(2);

                if ( (LA5_1==54) ) {
                    alt5=1;
                }
                else if ( (LA5_1==EOF||LA5_1==FCONST||(LA5_1 >= ICONST && LA5_1 <= ID)||LA5_1==LBRACE||LA5_1==LID||LA5_1==NL||LA5_1==RBRACE||LA5_1==SCONST||(LA5_1 >= 36 && LA5_1 <= 42)||(LA5_1 >= 44 && LA5_1 <= 47)||(LA5_1 >= 49 && LA5_1 <= 53)||(LA5_1 >= 55 && LA5_1 <= 64)||(LA5_1 >= 67 && LA5_1 <= 68)||(LA5_1 >= 71 && LA5_1 <= 73)||(LA5_1 >= 77 && LA5_1 <= 79)) ) {
                    alt5=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 5, 1, input);

                    throw nvae;

                }
            }
            else if ( (LA5_0==FCONST||LA5_0==ICONST||LA5_0==LBRACE||LA5_0==LID||LA5_0==SCONST||LA5_0==35||LA5_0==42||LA5_0==49||LA5_0==66||(LA5_0 >= 73 && LA5_0 <= 76)||LA5_0==80) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }
            switch (alt5) {
                case 1 :
                    // Casen.g:32:11: ID ':' stmt
                    {
                    ID7=(Token)match(input,ID,FOLLOW_ID_in_labeled_stmt206);  
                    stream_ID.add(ID7);


                    char_literal8=(Token)match(input,54,FOLLOW_54_in_labeled_stmt208);  
                    stream_54.add(char_literal8);


                    pushFollow(FOLLOW_stmt_in_labeled_stmt210);
                    stmt9=stmt();

                    state._fsp--;

                    stream_stmt.add(stmt9.getTree());

                    // AST REWRITE
                    // elements: stmt, ID
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 32:23: -> ^( LSTMT ID stmt )
                    {
                        // Casen.g:32:26: ^( LSTMT ID stmt )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(
                        (CommonTree)adaptor.create(LSTMT, "LSTMT")
                        , root_1);

                        adaptor.addChild(root_1, 
                        stream_ID.nextNode()
                        );

                        adaptor.addChild(root_1, stream_stmt.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 2 :
                    // Casen.g:33:10: stmt
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_stmt_in_labeled_stmt231);
                    stmt10=stmt();

                    state._fsp--;

                    adaptor.addChild(root_0, stmt10.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "labeled_stmt"


    public static class stmt_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "stmt"
    // Casen.g:36:1: stmt : ( expr | 'return' expr -> ^( RETURN expr ) | 'return' -> RETURN | 'IF' '(' expr ')' 'GOTO' ID -> ^( IFGOTO expr ID ) | 'yield' expr -> ^( YIELD expr ) | 'resume' expr -> ^( RESUME expr ) );
    public final CasenParser.stmt_return stmt() throws RecognitionException {
        CasenParser.stmt_return retval = new CasenParser.stmt_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token string_literal12=null;
        Token string_literal14=null;
        Token string_literal15=null;
        Token char_literal16=null;
        Token char_literal18=null;
        Token string_literal19=null;
        Token ID20=null;
        Token string_literal21=null;
        Token string_literal23=null;
        CasenParser.expr_return expr11 =null;

        CasenParser.expr_return expr13 =null;

        CasenParser.expr_return expr17 =null;

        CasenParser.expr_return expr22 =null;

        CasenParser.expr_return expr24 =null;


        CommonTree string_literal12_tree=null;
        CommonTree string_literal14_tree=null;
        CommonTree string_literal15_tree=null;
        CommonTree char_literal16_tree=null;
        CommonTree char_literal18_tree=null;
        CommonTree string_literal19_tree=null;
        CommonTree ID20_tree=null;
        CommonTree string_literal21_tree=null;
        CommonTree string_literal23_tree=null;
        RewriteRuleTokenStream stream_66=new RewriteRuleTokenStream(adaptor,"token 66");
        RewriteRuleTokenStream stream_43=new RewriteRuleTokenStream(adaptor,"token 43");
        RewriteRuleTokenStream stream_42=new RewriteRuleTokenStream(adaptor,"token 42");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_65=new RewriteRuleTokenStream(adaptor,"token 65");
        RewriteRuleTokenStream stream_74=new RewriteRuleTokenStream(adaptor,"token 74");
        RewriteRuleTokenStream stream_75=new RewriteRuleTokenStream(adaptor,"token 75");
        RewriteRuleTokenStream stream_76=new RewriteRuleTokenStream(adaptor,"token 76");
        RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
        try {
            // Casen.g:37:5: ( expr | 'return' expr -> ^( RETURN expr ) | 'return' -> RETURN | 'IF' '(' expr ')' 'GOTO' ID -> ^( IFGOTO expr ID ) | 'yield' expr -> ^( YIELD expr ) | 'resume' expr -> ^( RESUME expr ) )
            int alt6=6;
            switch ( input.LA(1) ) {
            case FCONST:
            case ICONST:
            case ID:
            case LBRACE:
            case LID:
            case SCONST:
            case 35:
            case 42:
            case 49:
            case 73:
            case 80:
                {
                alt6=1;
                }
                break;
            case 75:
                {
                int LA6_12 = input.LA(2);

                if ( (LA6_12==FCONST||(LA6_12 >= ICONST && LA6_12 <= ID)||LA6_12==LBRACE||LA6_12==LID||LA6_12==SCONST||LA6_12==35||LA6_12==42||LA6_12==49||LA6_12==73||LA6_12==80) ) {
                    alt6=2;
                }
                else if ( (LA6_12==EOF||LA6_12==NL||LA6_12==RBRACE) ) {
                    alt6=3;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 6, 12, input);

                    throw nvae;

                }
                }
                break;
            case 66:
                {
                alt6=4;
                }
                break;
            case 76:
                {
                alt6=5;
                }
                break;
            case 74:
                {
                alt6=6;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;

            }

            switch (alt6) {
                case 1 :
                    // Casen.g:37:9: expr
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_expr_in_stmt251);
                    expr11=expr();

                    state._fsp--;

                    adaptor.addChild(root_0, expr11.getTree());

                    }
                    break;
                case 2 :
                    // Casen.g:38:10: 'return' expr
                    {
                    string_literal12=(Token)match(input,75,FOLLOW_75_in_stmt262);  
                    stream_75.add(string_literal12);


                    pushFollow(FOLLOW_expr_in_stmt264);
                    expr13=expr();

                    state._fsp--;

                    stream_expr.add(expr13.getTree());

                    // AST REWRITE
                    // elements: expr
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 38:24: -> ^( RETURN expr )
                    {
                        // Casen.g:38:27: ^( RETURN expr )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(
                        (CommonTree)adaptor.create(RETURN, "RETURN")
                        , root_1);

                        adaptor.addChild(root_1, stream_expr.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 3 :
                    // Casen.g:39:10: 'return'
                    {
                    string_literal14=(Token)match(input,75,FOLLOW_75_in_stmt283);  
                    stream_75.add(string_literal14);


                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 39:19: -> RETURN
                    {
                        adaptor.addChild(root_0, 
                        (CommonTree)adaptor.create(RETURN, "RETURN")
                        );

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 4 :
                    // Casen.g:40:10: 'IF' '(' expr ')' 'GOTO' ID
                    {
                    string_literal15=(Token)match(input,66,FOLLOW_66_in_stmt298);  
                    stream_66.add(string_literal15);


                    char_literal16=(Token)match(input,42,FOLLOW_42_in_stmt300);  
                    stream_42.add(char_literal16);


                    pushFollow(FOLLOW_expr_in_stmt302);
                    expr17=expr();

                    state._fsp--;

                    stream_expr.add(expr17.getTree());

                    char_literal18=(Token)match(input,43,FOLLOW_43_in_stmt304);  
                    stream_43.add(char_literal18);


                    string_literal19=(Token)match(input,65,FOLLOW_65_in_stmt306);  
                    stream_65.add(string_literal19);


                    ID20=(Token)match(input,ID,FOLLOW_ID_in_stmt308);  
                    stream_ID.add(ID20);


                    // AST REWRITE
                    // elements: expr, ID
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 40:38: -> ^( IFGOTO expr ID )
                    {
                        // Casen.g:40:41: ^( IFGOTO expr ID )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(
                        (CommonTree)adaptor.create(IFGOTO, "IFGOTO")
                        , root_1);

                        adaptor.addChild(root_1, stream_expr.nextTree());

                        adaptor.addChild(root_1, 
                        stream_ID.nextNode()
                        );

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 5 :
                    // Casen.g:41:10: 'yield' expr
                    {
                    string_literal21=(Token)match(input,76,FOLLOW_76_in_stmt329);  
                    stream_76.add(string_literal21);


                    pushFollow(FOLLOW_expr_in_stmt331);
                    expr22=expr();

                    state._fsp--;

                    stream_expr.add(expr22.getTree());

                    // AST REWRITE
                    // elements: expr
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 41:23: -> ^( YIELD expr )
                    {
                        // Casen.g:41:26: ^( YIELD expr )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(
                        (CommonTree)adaptor.create(YIELD, "YIELD")
                        , root_1);

                        adaptor.addChild(root_1, stream_expr.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 6 :
                    // Casen.g:42:9: 'resume' expr
                    {
                    string_literal23=(Token)match(input,74,FOLLOW_74_in_stmt349);  
                    stream_74.add(string_literal23);


                    pushFollow(FOLLOW_expr_in_stmt351);
                    expr24=expr();

                    state._fsp--;

                    stream_expr.add(expr24.getTree());

                    // AST REWRITE
                    // elements: expr
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 42:23: -> ^( RESUME expr )
                    {
                        // Casen.g:42:26: ^( RESUME expr )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(
                        (CommonTree)adaptor.create(RESUME, "RESUME")
                        , root_1);

                        adaptor.addChild(root_1, stream_expr.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;
